--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,9 @@
 {
-  "version": 2
+  "version": 2,
+  "builds": [
+    {
+      "src": "landing-page/package.json",
+      "use": "@vercel/next"
+    }
+  ]
 }
